third_party/move/move-compiler-v2/tests/checking/typing/pack_reference_2.exp

Diagnostics:
error: cannot assign `bool` to left-hand side of type `u64`
  ┌─ tests/checking/typing/pack_reference_2.move:7:9
  │
7 │         x = false
  │         ^
